syntax = "proto3";

package rpcdatacontract;

service AI {
    // AI response
    rpc Process (Request) returns (Reply) {}
  }

message Column {
    string english_name = 1;
    string chinese_name = 2;
    string type = 3;
}

message Cell {
    oneof value{
        string val_string = 1;
        double val_integer = 2;
    }
}

message Row {
    repeated Cell cells = 1;
}

message Table {
    repeated Column columns = 1;
    repeated Row rows = 2;
}

message Reply {
    repeated Table tables = 1;
}

message Request {
    string question = 1;
}

